docs/sdk/ios/3.0/direct-calling1.mdx
---
title: "Direct Calling"
---



This section will guide you to start the call/conference directly with the session id of your choice. The session id is the most important parameter as all the users joining the same session id will be connected to the same call/conference.

## Implementation

The most important class that will be used in the implementation is the `CallSettings` class. This class allows you to set the various parameters for the call/conference. In order to set the various parameters of the `CallSettings` class, you need to use the `CallSettingsBuilder` class. Below are the various options available with the `CallSettings` class.

CallSettingsBuilder class takes the 2 mandatory parameters as a part of the constructor:

1. UIView i.e a view in which you want to show the callingView inside it.
2. An object of the RelativeLayout. The calling UI will be loaded in this relative layout provided.

The other mandatory parameter is the sessionId for the call/conference. You can use the setSessionId() method of the `CallSettingsBuilder` to set the session Id of the call.

A basic example of how to start a direct call:

<Tabs>
<Tab title="Swift">
```swift
let sessionID = "12345" //you can set anything
let callView = // a UIView you want to show the calling view in

let callSettings = CallSettings.CallSettingsBuilder(callView: callView, sessionId:sessionID).setAudioOnlyCall(audioOnly: true).enableDefaultLayout(defaultLayout: true).build()

  CometChat.startCall(callSettings: callSettings, userJoined: { (user) in

     print("userJoined \(user)")
  }, userLeft: { (user) in

     print("userLeft \(user)")
  }, userListUpdated: { (userList) in
     
       print("userList \(userList)")
  }, audioModesUpdated: { (audioList) in
     
       print("audioList \(audioList)")             
  }, onUserMuted: {onUserMuted in 
  		print("onUserMuted \(onUserMuted)")                    
  }, onCallSwitchedToVideo: {callSwitchVideo in
  		print("callSwitchVideo \(callSwitchVideo)")                          
  }, onRecordingStarted: {onRecordingStarted in 
  		print("onRecordingStarted \(onRecordingStarted)")  
  }, onRecordingStopped: {onRecordingStopped in 
  		print("onRecordingStopped \(onRecordingStopped)")  
	}, onError: { (error) in

      print("OnError \(error!.errorDescription)")
  }) { (call) in

      print("onCallended \(call)")
  }
```

</Tab>

</Tabs>

The `setAudioOnlyCall()` method allows you to set if the call is supposed to be an audio call or an audio-video call. If set to true, the call will be an audio-only call else when set to false the call will be an audio-video call. The default will is false, so if not set, the call will be an audio-video call.

| Parameter   | Description                                          |
| ----------- | ---------------------------------------------------- |
| `view`      | The view that you want to show the calling view in.  |
| `sessionID` | The unique session ID available in the `Call` object |

The `OngoingCallListener` listener provides you with the below callback methods:

| Callback Method         | Description                                                                                                                  |
| ----------------------- | ---------------------------------------------------------------------------------------------------------------------------- |
| `userJoined`            | This method is called when any other user joins the call. The user details can be obtained from the `User` object provided.  |
| `userLeft`              | This method is called when a user leaves the call. The details of the user can be obtained from the provided `User` object.  |
| `onError`               | This method is called when there is some error in establishing the call.                                                     |
| `callEnded`             | This method is called when the call is successfully ended. The call details can be obtained from the `Call` object provided. |
| `userListUpdated`       | This method is called when there is some error in establishing the call.                                                     |
| `audioModesUpdated`     | This method is called when the call is successfully ended. The call details can be obtained from the `Call` object provided. |
| `onUserMuted`           | This method is triggered when a user is muted in the ongoing call.                                                           |
| `onCallSwitchedToVideo` | This callback is triggered when an audio call is converted into a video call.                                                |
| `onRecordingStarted`    | This method is triggered when a user starts video recording.                                                                 |
| `onRecordingStopped`    | This method is triggered when a user stops video recording                                                                   |

## Settings

The `CallSettings` class is the most important class when it comes to the implementation of the Calling feature. This is the class that allows you to customize the overall calling experience. The properties for the call/conference can be set using the `CallSettingsBuilder` class. This will eventually give you and object of the `CallSettings` class which you can pass to the `startCall()` method to start the call.

The **mandatory** parameters that are required to be present for any call/conference to work are:

1. UIView i.e a view in which you want to show the callingView inside it.
2. An object of the RelativeLayout. The calling UI will be loaded in this relative layout provided.

The options available for customization of calls are:

| Setting                                                            | Description                                                                                                                                                                                                                                                                                                                                                                                  |
| ------------------------------------------------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `enableDefaultLayout(boolean)`                                     | If set to `true` enables the default layout for handling the call operations. If set to `false` it hides the button layout and just displays the Call View **Default value = true**                                                                                                                                                                                                          |
| `showAudioModeButton(boolean)`                                     | If set to `true` it displays the AudioModeButton in Button Layout. if set to `false` it hides the AudioModeButton in Button Layout **Default value = true**                                                                                                                                                                                                                                  |
| `showEndCallButton(boolean)`                                       | If set to `true` it displays the EndCallButton in Button Layout. if set to `false` it hides the EndCallButton in Button Layout **Default value = true**                                                                                                                                                                                                                                      |
| `showPauseVideoButton(boolean)`                                    | If set to `true` it displays the PauseVideoButton in Button Layout. if set to `false` it hides the PauseVideoButton in Button Layout **Default value = true**                                                                                                                                                                                                                                |
| `showMuteAudioButton(boolean)`                                     | If set to `true` it displays the MuteAudioButton in Button Layout. if set to `false` it hides the MuteAudioButton in Button Layout **Default value = true**                                                                                                                                                                                                                                  |
| `showSwitchCameraButton(boolean)`                                  | If set to `true` it displays the SwitchCameraButton in Button Layout. if set to `false` it hides the SwitchCameraButton in Button Layout **Default value = true**                                                                                                                                                                                                                            |
| `setMode(mode: CometChat.CallMode)`                                | Currently, you can set 3 modes in CallDisplayModeEnum. MODE\_DEFAULT MODE\_SINGLE MODE\_SPOTLIGHT when **MODE\_DEFAULT** is set our default screen will be displayed when **MODE\_SINGLE** is set the user will be able to see the opponents video only when **MODE\_SPOTLIGHT** is set the user will be able to see members joined count along with their name and can also pin/unpin users |
| `setAudioOnlyCall(boolean)`                                        | If set to true, the call will be strictly an audio call. If ser to false, the call will be an audio-video call. **Default value = false**                                                                                                                                                                                                                                                    |
| `startWithAudioMuted(audioMuted: boolean)`                         | This ensures the call is started with the audio muted if set to true                                                                                                                                                                                                                                                                                                                         |
| `startWithVideoMuted(videoMuted: boolean)`                         | This ensures the call is started with the video paused if set to true                                                                                                                                                                                                                                                                                                                        |
| `setDefaultAudioMode(mode: CometChat.AudioMode)`                   | This method can be used if you wish to start the call with a specific audio mode. The available options are 1. SPEAKER 2. EARPIECE 3. BLUETOOTH 4. HEADPHONES                                                                                                                                                                                                                                |
| `showSwitchToVideoCallButton(switchCall: boolean)`                 | This method shows/hides the switch to video call button. If set to true it will display the switch to video call button. If set to false it will hide the switch to video call button. **Default value = true**                                                                                                                                                                              |
| `setMainVideoAspectRatio(_ asceptRatio: CallSettings.AsceptRatio)` | This method can be used to customize the main video container. You can read more about this [here](/docs/sdk/ios/3.0/video-view-customisation1).                                                                                                                                                                                                                                             |
| `enableVideoTileClick(_ flag: Bool)`                               | This method can be used to enable/disable video tile click functionality in **MODE\_SPOTLIGHT** mode. **Default value = true**                                                                                                                                                                                                                                                               |
| `enableVideoTileDrag(_ flag: Bool)`                                | This method can be used to enable/disable video tile click functionality in **MODE\_SPOTLIGHT** mode. **Default value = true**                                                                                                                                                                                                                                                               |

In case you wish to achieve a completely customized UI for the Calling experience, you can do so by embedding default android buttons to the screen as per your requirement and then use the below methods to achieve different functionalities for the embedded buttons.

For the use case where you wish to align your own custom buttons and not use the default layout provided by CometChat, you can embed the buttons in your layout and use the below methods to perform the corresponding operations:

#### Switch Camera

Switch Camera You can call `switchCamera()` Method to toggle between camera sources.

<Tabs>
<Tab title="Swift">
```swift
let callmanager = CallManager()
callmanager.switchCamera()
```

</Tab>

</Tabs>

### Mute Audio

You can call `muteAudio()` Method to mute your Audio Stream to the end-user.

<Tabs>
<Tab title="Swift">
```swift
let callmanager = CallManager()
callmanager.muteAudio(mute: true) //toggle this value for unmuting the user's audio
```

</Tab>

</Tabs>

If set to `true` the Audio Stream is muted and if set to`false` Audio Stream is transmitted.

### Pause Video

Pause Video You can call `pauseVideo()` Method to pause Video Stream to the end-user.

<Tabs>
<Tab title="Swift">
```swift
let callmanager = CallManager()
callmanager.pauseVideo(pauseVideo: true) //toggle this value for resuming the user's video
```

</Tab>

</Tabs>

If set to `true` the Video Stream is muted and if set to`false` Video Stream is transmitted.

### Audio Mode

Set Audio Mode You can call `setAudioMode()` to set the output of the audio stream.

<Tabs>
<Tab title="Swift">
```swift
let callmanager = CallManager()
callmanager.audioMode(setAudioMode: .EARPIECE)
```

</Tab>

</Tabs>

The audio mode can have either one of the below 4 values:

* SPEAKER
* EARPIECE
* BLUETOOTH
* HEADPHONES

### End Call

You can use the `CometChat.endCall()` method of the `CometChat` class to end the call.

<Tabs>
<Tab title="Swift">
```swift
var sessionID = "" // sessionId of the call

CometChat.endCall(sessionID: sessionID, onSuccess: { (call) in
            
    print("Call Ended Successfully")
}) { (error) in

    print("Error in ending the call \(error?.errorDescription)")
}
```

</Tab>

</Tabs>

### Get list of available audio modes

This method will return the list of available audio modes. Based on the list received, you can set the audio mode for the ongoing call using the `setAudioMode()` method.

<Tabs>
<Tab title="Swift">
```swift
CometChat.getAudioModes { (modes) in
	print("Available audio modes received \(modes)")
}
```

</Tab>

</Tabs>

The AudioMode class has the below properties:

1. mode - The mode can be either one of the below values:

* SPEAKER
* EARPIECE
* BLUETOOTH
* HEADPHONES

2. isSelected - This is a boolean value that indicates if the audio mode is the active mode.

<Warning>

The `CometChat.getActiveCall()` method in case of Direct Calling will return nil and all the details related to the call session will have to be saved and maintained at your end.

</Warning>

## Call Participant Count

In order to get the number of participants in any call, you can use the `getCallParticipantCount()` method. This method takes the session id of the call and returns the number of participants that are active in the call.

<Tabs>
<Tab title="Swift">
```swift
let sessionID = "12345"

 CometChat.getCallParticipantCount(sessionId: "", type: .DIRECT, onSucces:  {
      (count) in
      print("Count \(count)")
 }, onError: { (error) in
      print("OnError \(error?.errorDescription)")
 })
```

</Tab>

<Tab title="Objective C">
```objc
// To switch Camera from front to rear and vice versa. 
[CometChatCalls switchCamera];
```

</Tab>

</Tabs>
